test/src/e2e_vm_tests/test_programs/should_fail/attributes_invalid_args_expect_values/src/allow_attr.sw
library;

#[allow(dead_code = true, deprecated = "text", unknown_arg_2 = 112233)]
pub fn not_ok() {}